<resources>
    <string name="app_name">Bell\'s Track</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_photo_guide">PhotoGuide</string>
    <string name="title_activity_new_session">NewSession</string>
    <string name="title_activity_personal_details">PersonalDetails</string>
    <string name="title_activity_previous_analysis">PreviousAnalysis</string>
    <string name="new_photo_button">Session</string>
    <string name="previous_analysis_button">Previous analysis</string>
    <string name="medical_information_button">Medical information</string>
    <string name="personal_detail_button">Personal Details</string>
    <string name="new_session_button">New session</string>
    <string name="photo_guide_button">Guide</string>
    <string name="session_analysis_button">Session analysis</string>
    <string name="therapist_mail">Therapist Email</string>
    <string name="user_name">Your name</string>
    <string name="left_side_radio_button">left side</string>
    <string name="right_side_radio_button">Right side</string>
    <string name="submit_Personal_Details">Submit</string>
    <string name="medical_info_text">Bells palsy is a type of facial paralysis that results in an inability to control the facial muscles on the affected side. symptoms can vary from mild to severe.\nthey may include muscle twitching, weakness, or total loss of the ability to move one or rarely both sides of the face.\nother symptoms include drooping of the eyelid, a change in taste, pain around the ear, and increased sensitivity to sound. typically symptoms come on over 48 hours.</string>
    <string name="New_Session_kiss_btn">Kiss</string>
    <string name="New_session_smile_btn">Smile</string>
    <string name="New_Session_eyes_close_btn">Eyes closed</string>
    <string name="New_Session_blankly_btn">Natural</string>
    <string name="New_Session_rabbit_btn">Rabbit</string>
    <string name="New_Session_eyebrow_lifts_btn">Eyebrows lift</string>
    <string name="PreviousAnalysis_send_therapist_btn">Send to therapist</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="submit_btn">Submit</string>
    <string name="camerabutton_descr">CameraButton</string>
    <string name="gallerybutton_descr">GalleryButton</string>
    <string name="photo_guide_text">The app shows better results when you\'ve shot all six of the expressions, This is a guide to how each expression looks, After the picture is taken - the button with the name of the expression Painted green.\n</string>
    <string name="btn_showlandm">Show Landmarks</string>
    <string name="back_btn">Back</string>
    <string name="btn_finish_session">Finish Session</string>
    <string name="tv_session_results">Session Results</string>
    <string name="treated_side">Treated Side</string>
    <string name="personal_details_tv">Personal Details</string>
    <string name="txt_personal_details_username">Treated Side</string>
    <string name="logo">logo</string>
    <string name="lbl_privAnalysis">Expression:</string>
    <string name="btn_chronic">Chronic</string>
    <string name="btn_acute">Acute</string>
    <string name="txt_patienttype">Patient Type</string>
    <string name="cb_eyeToBrow">Eye To Brow Distance</string>
    <string name="cb_eyeArea">Eye Area</string>
    <string name="cb_mouthAngle">Mouth Angle</string>
    <string name="cb_moutDist">Mouth Distance</string>
    <string name="cb_innerMouthArea">Inner Mouth Area</string>
    <string name="cb_OuterMouthArea">Outer Mouth Area</string>
</resources>