<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layoutDirection="ltr">

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <EditText
        android:id="@+id/txt_therapist_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/therapist_mail"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/txt_username"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/radioSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:layout_marginTop="126dp"
        android:layout_below="@+id/txt_phisio_mail"
        android:layout_alignParentStart="true">


        <RadioButton
            android:id="@+id/radio_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/left_side_radio_button"
            android:textSize="18sp"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_PD_submit"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:background="@drawable/buttonshape"
        android:onClick="SubmitClicked"
        android:shadowColor="#2328A8"
        android:shadowDx="-0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/submit_Personal_Details"
        android:textColor="#D3DCE0"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/radioSide"
        android:layout_marginStart="84dp" />

    <RadioButton
        android:id="@+id/radio_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/radioSide"
        android:layout_toEndOf="@+id/radioSide"
        android:text="@string/right_side_radio_button"
        android:textSize="18sp" />

</RelativeLayout>
